--- a/RecordTest/Base.lproj/Main.storyboard
+++ b/RecordTest/Base.lproj/Main.storyboard
@@ -1,25 +1,63 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NhG-iR-EmS">
+                                <rect key="frame" x="0.0" y="20" width="320" height="498"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="uIN-FW-Sgb"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="BoH-f8-e16"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fyT-Jm-xtc">
+                                <rect key="frame" x="0.0" y="518" width="320" height="50"/>
+                                <color key="backgroundColor" red="0.78039216995239258" green="0.78039216995239258" blue="0.78039216995239258" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="ffR-wE-Q83"/>
+                                </constraints>
+                                <state key="normal" title="按住录音"/>
+                                <state key="highlighted" title="松开结束录音"/>
+                                <connections>
+                                    <action selector="dragDown:" destination="BYZ-38-t0r" eventType="touchDown" id="VQz-oA-PpD"/>
+                                    <action selector="dragExit:" destination="BYZ-38-t0r" eventType="touchDragExit" id="NhJ-cS-tga"/>
+                                    <action selector="dragExit:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bdI-3v-7Hs"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="fyT-Jm-xtc" secondAttribute="trailing" id="9xb-zp-p6g"/>
+                            <constraint firstItem="NhG-iR-EmS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="BrK-Dd-Phn"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="fyT-Jm-xtc" secondAttribute="bottom" id="JLj-78-BgR"/>
+                            <constraint firstItem="fyT-Jm-xtc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="T6U-lB-OLE"/>
+                            <constraint firstItem="NhG-iR-EmS" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="fIE-8k-2Bd"/>
+                            <constraint firstItem="fyT-Jm-xtc" firstAttribute="top" secondItem="NhG-iR-EmS" secondAttribute="bottom" id="pJQ-aN-XOt"/>
+                            <constraint firstAttribute="trailing" secondItem="NhG-iR-EmS" secondAttribute="trailing" id="r6m-BI-LKv"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="NhG-iR-EmS" id="T0O-Cl-xbd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="130.66666666666666" y="305.30000000000001"/>
         </scene>
     </scenes>
 </document>
