--- a/RecordTest/Base.lproj/Main.storyboard
+++ b/RecordTest/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="BoH-f8-e16"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fyT-Jm-xtc">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fyT-Jm-xtc" customClass="ZHRecordButton">
                                 <rect key="frame" x="0.0" y="518" width="320" height="50"/>
                                 <color key="backgroundColor" red="0.78039216995239258" green="0.78039216995239258" blue="0.78039216995239258" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -33,11 +33,6 @@
                                 </constraints>
                                 <state key="normal" title="按住录音"/>
                                 <state key="highlighted" title="松开结束录音"/>
-                                <connections>
-                                    <action selector="dragDown:" destination="BYZ-38-t0r" eventType="touchDown" id="VQz-oA-PpD"/>
-                                    <action selector="dragExit:" destination="BYZ-38-t0r" eventType="touchDragExit" id="NhJ-cS-tga"/>
-                                    <action selector="dragExit:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bdI-3v-7Hs"/>
-                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -52,6 +47,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="recordButton" destination="fyT-Jm-xtc" id="fLa-9C-2NI"/>
                         <outlet property="tableView" destination="NhG-iR-EmS" id="T0O-Cl-xbd"/>
                     </connections>
                 </viewController>
